Acordeon Anime Finish

--- a/01/index.html
+++ b/01/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--*Styles-->
+    <link rel="stylesheet" href="./styles.css">
+
+    <!--*icon-->
+    <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
+
+    <!--*Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
     <title>Day 01</title>
 </head>
 <body>
-    
+    <main class="images"> <!--? Flex-->
+        <div class="panel active">
+            <h3>One Piece</h3>
+        </div>
+        <div class="panel">
+            <h3>Bleach</h3>
+        </div>
+        <div class="panel">
+            <h3>Dragon Ball Z</h3>
+        </div>
+        <div class="panel">
+            <h3>Ben10</h3>
+        </div>
+        <div class="panel">
+            <h3>Avatar</h3>
+        </div>
+    </main>
+
+    <!--*Logic-->
+    <script src="./app.js"></script>
 </body>
 </html>
